--- a/css/lettle.css
+++ b/css/lettle.css
@@ -101,6 +101,8 @@ header {
 	text-align: left;
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
+	margin-left: 0.375rem;
+	margin-right: 0.375rem;
 	font-family: var(--main-font);
 }
 
