Respaced the settings page

--- a/css/lettle.css
+++ b/css/lettle.css
@@ -152,6 +152,7 @@ header {
 	margin: 0 auto 0 auto;
 	text-align: left;
 	font-family: var(--main-font);
+	margin-top: 0.75rem;
 }
 
 .setting-description {
